# trading_bot

./: .dockerignore  .gitignore  CHANGELOG.md  DEPLOYMENT_NEXTJS.md  Dockerfile  README.md  docker-compose.test.yml  docker-compose.yml  env.example  pyproject.toml  pytest.ini
cursor/rules/: 00-DOCTRINE.md  01-PLAYBOOK-request.md  02-PLAYBOOK-refresh.md  03-PLAYBOOK-retro.md  10—Directive_Standards_Python_(Bot_de_Trading).md  11-DIRECTIVE-genai-strategy.md  12-DIRECTIVE-binance-guardrails.md  13-DIRECTIVE-data-handling.md  14-DIRECTIVE-testing-ci.md  15-DIRECTIVE-git-output-style.md
examples/: README.md  api_server_example.py  autonomous_trading_example.py  docker_example.py  nextjs_ui_example.py  sample_data.csv  telegram_bot_example.py
scripts/: backup_restore.py  health_check.py  load_test.py  performance_test.py  run_integration_tests.py  run_tests.py  security_test.py  start_bot.py
src/: __init__.py  api_cli.py  app.py  autonomous_trading.py  telegram_bot_cli.py
src/api/: __init__.py  server.py
src/communication/: __init__.py  notification_manager.py  telegram_bot.py
src/core/: __init__.py  settings.py  types.py  utils.py
src/data/: __init__.py  cache.py  features.py  ingestion.py
src/execution/: __init__.py  binance_client.py  order_router.py  risk_manager.py
src/llm/: __init__.py  anthropic_client.py  base.py  factory.py  gemini_client.py  openai_client.py
src/monitoring/: __init__.py  alerts.py  dashboard.py
src/strategy/: __init__.py  base.py  llm_strategy.py  registry.py  technical_strategy.py
src/streaming/: __init__.py  binance_ws.py  data_buffer.py  scheduler.py
src/trading/: __init__.py  order_manager.py  state_manager.py  trading_loop.py
tests/: __init__.py  test_basic_functionality.py  test_integration.py  test_telegram_integration.py
ui/: Dockerfile  next.config.js  package.json  tailwind.config.js
ui/app/: globals.css  layout.tsx  page.tsx
ui/app/config/: page.tsx
ui/app/dashboard/: page.tsx
ui/app/journal/: page.tsx
ui/components/ui/: Button.tsx  Card.tsx  Input.tsx  Select.tsx  StatusIndicator.tsx  index.ts
ui/hooks/: useWebSocket.ts
ui/types/: index.ts
